tests/errors/runtime/index_oob.zy
arr = [10, 20, 30]
>> arr[99] ¶
